# PA-2019

./: README.md
PracticaFinalPA/PracticaFinalPA/: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Cube.cpp  Cube.h  Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Engine.cpp  FlyingCamera.cpp  FlyingCamera.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  PracticaFinalPA.vcxproj  PracticaFinalPA.vcxproj.filters  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Teapot.cpp  Teapot.h  Torus.cpp  Torus.h  Triangle.cpp  Vector3D.cpp  Vector3D.h
PracticaFinalPA/PracticaFinalPA/Debug/: vc141.idb
PracticaFinalPA/PracticaFinalPA/Debug/PracticaFinalPA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PracticaFinalPA.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PracticaFinalPA/PracticaFinalPA/x64/Debug/: camera.new.obj.enc  cube.new.obj.enc  cuboid.new.obj.enc  cylinder.new.obj.enc  engine.new.obj.enc  flyingcamera.new.obj.enc  game.new.obj.enc  gameobject.new.obj.enc  player.new.obj.enc  scene.new.obj.enc  sphere.new.obj.enc  teapot.new.obj.enc  torus.new.obj.enc  vc142.idb
PracticaFinalPA/PracticaFinalPA/x64/Debug/PracticaFinalPA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PracticaFinalPA.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PracticaFinalPA/PracticaFinalPA/x64/Release/PracticaFinalPA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PracticaFinalPA.lastbuildstate  PracticaFinalPA.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+6 files in other folders)
